--- a/api.html
+++ b/api.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark p-2 fixed-top">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark p-2">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">API Fetch</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -25,17 +25,16 @@
                     <a class="nav-link" href="#" style="color: black;">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="Signup()"style="color: black;">Signup</a>
+                    <a class="nav-link" href="index.html" style="color: black;">Signup</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="Login()"style="color: black;">Login</a>
+                    <a class="nav-link" href="login.html"style="color: black;">Login</a>
                   </li>  
                   
                 </ul>
               </div>
             </div>
           </nav>
-          <br><br><br><br><br
     </header>
    <footer>
     <div class="text">
